--- a/Flags/package.json
+++ b/Flags/package.json
@@ -3,6 +3,8 @@
     "start": "node main.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
+    "cli-progress": "^3.12.0",
     "download": "^8.0.0",
     "wikipedia": "^2.1.2"
   }
